Add Update Channel
